# FDCT

./: CMakeLists.txt  Pipfile  package.xml
launch/: segmentation.launch
scripts/: node.py
